# influence_synth_repo

./: README.md  main.py  pyproject.toml
src/: config.py  data.py
