[project]
name = "influence-synth-curation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pydvl>=0.9.2",
    "scikit-learn>=1.8.0",
    "sdmetrics>=0.28.0",
    "sdv>=1.35.1",
]
